# Bernard

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  a.out  cmake_install.cmake  level.h.gch  main.cpp
include/: l_init.h  level.h  parser.h  player.h  toon.h
src/: Makefile  l_init.cpp  level.cpp  main.cpp  parser.cpp  player.cpp  run  toon.cpp
